syntax="proto3";

package postspb;
option go_package = "./postspb";

import "google/api/annotations.proto";

message PingMessage {
  string greeting = 1;
}

message EmptyData {}

message Post {
  int64 id=1;
  string text=2;
  int64 created=3;
  User author=4;
  int64 parentid=5;
  repeated Post children=6;
  int64 likes=7;
  bool liked=8;
  string media=9;
  Post rezweet=10;
}

message User {
  int64 id=1;
  string username=2;
}

message CreatePostRequest {
	string text=1;
  int64 parentid=2;
  string media=3;
}

message RezweetRequest {
	string text=1;
  int64 rezweetId=4;
}

message CreatePostResponse {
  Post post=1;
}

message GetPostsResponse {
	repeated Post posts=1;
}

message GetPostRequest {
	int64 id=1;
}

message GetPostResponse {
  Post post=1;
}

message LikeRequest {
  int64 post=1;
}

service PostsService {
  rpc SayHello(PingMessage) returns (PingMessage) {
    option (google.api.http) = {
      post: "/posts/ping"
      body: "*"
    };
  }
	rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
     option (google.api.http) = {
       post: "/posts/create"
       body: "*"
     };
  };
	rpc GetPosts(EmptyData) returns (GetPostsResponse) {
     option (google.api.http) = {
       post: "/posts/get"
       body: "*"
     };
  };
	rpc GetPost(GetPostRequest) returns (GetPostResponse) {
     option (google.api.http) = {
       post: "/posts/get/id"
       body: "*"
     };
  };
	rpc GetPostChilds(GetPostRequest) returns (GetPostsResponse) {
     option (google.api.http) = {
       post: "/posts/id/childs"
       body: "*"
     };
  };
  rpc LikePost(LikeRequest) returns (EmptyData) {
     option (google.api.http) = {
       post: "/posts/id/like"
       body: "*"
     };
  };
  rpc Rezweet(RezweetRequest) returns (CreatePostResponse) {
     option (google.api.http) = {
       post: "/posts/id/rezweet"
       body: "*"
     };
  };
}
